--- a/Usuarios/Templates/usuario/nuevo_usuario.html
+++ b/Usuarios/Templates/usuario/nuevo_usuario.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <form method="POST">
+        {% csrf_token %}
         {{ usuarios_form.as_p }}
         <button type="submit">Registrar</button>
     </form>
