--- a/django_blog/template/videojuegos.html
+++ b/django_blog/template/videojuegos.html
@@ -1,3 +1,4 @@
 {% extends "index.html" %}
 {% block titulo %}Videojuegos{% endblock titulo %}
 {% block imagen %}{% url 'assets/img/videojuegos.jpg' %}{% endblock imagen %}
+{% block titulo_principal %}Videojuegos{% endblock titulo_principal %}
