--- a/django_blog/template/generales.html
+++ b/django_blog/template/generales.html
@@ -2,4 +2,4 @@
 {% load static %}
 {% block titulo %} Generales {% endblock titulo %}
 {% block titulo_principal %}Generales{% endblock titulo_principal %}
-{% block imagen %}{% static 'assets/img/generales.jfif' %}{% endblock imagen %}
+{% block imagen %}{% static 'assets/img/generales.jpg' %}{% endblock imagen %}
