--- a/django_blog/template/videojuegos.html
+++ b/django_blog/template/videojuegos.html
@@ -1,4 +1,5 @@
 {% extends "index.html" %}
+{% load static %}
 {% block titulo %}Videojuegos{% endblock titulo %}
-{% block imagen %}{% url 'assets/img/videojuegos.jpg' %}{% endblock imagen %}
+{% block imagen %}{% static 'assets/img/videojuegos.jpg' %}{% endblock imagen %}
 {% block titulo_principal %}Videojuegos{% endblock titulo_principal %}
