--- a/django_blog/template/index.html
+++ b/django_blog/template/index.html
@@ -58,7 +58,7 @@
                     {% if posts %}
                         {% for post in posts %}
                             <div class="post-preview">
-                                <a href="post.html">
+                                <a href="{% url 'detalle_post' post.slug %}">
                                     <h2 class="post-title">{{ post.titulo }}</h2>
                                     <h3 class="post-subtitle">{{ post.descripcion }}</h3>
                                 </a>
