--- a/django_blog/template/index.html
+++ b/django_blog/template/index.html
@@ -49,7 +49,26 @@
                     </div>
                 </div>
             </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 search">
+                        <form method="get">
+                            <div id ='custom-search-input'>
+                                <div class="input-group col-md-12">
+                                    <input type="text" class="form-control" placeholder="Buscar..." name="bsucar">
+                                        <span class="input-group-list">
+                                            <i class="icon icon-search"></i>
+                                            <button type="submit" class="boton btn-success">Buscar</button>
+                                        </span>
+                                    </input>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </header>
+        
         <!-- Main Content-->
         
         <div class="container px-4 px-lg-5">
