--- a/Roles_Usuarios/Templates/usuarios/registro_usuario.html
+++ b/Roles_Usuarios/Templates/usuarios/registro_usuario.html
@@ -9,15 +9,14 @@
 <body>
     <form method="POST">
         {% csrf_token %}
-        
-        <label>Nombre(s)</label>
-        <input type="text" name="nombre">
-        <label>Apellidos</label>
-        <input type="text" name="apellido">
-        <label>Correo</label>
-        <input type="text" name="email">
-        <label>Contraseña</label>
-        <input type="password" name="contrasena">
+        <p>Nombre</p>
+        {{ form.nombre }}
+        <p>Apellido</p>
+        {{ form.apellido }}
+        <p>Correo</p>
+        {{ form.email }}
+        <p>Password</p>
+        {{ form.contrasena }}
 
         <button type="submit">Registrar</button>
     </form>
