crear usuario con clases

--- a/Roles_Usuarios/Templates/usuarios/registro_usuario.html
+++ b/Roles_Usuarios/Templates/usuarios/registro_usuario.html
@@ -17,8 +17,7 @@
         {{ form.email }}
         <p>Password</p>
         {{ form.contrasena }}
-
-        <button type="submit">Registrar</button>
+    <a class="btn" href="{% url 'listar_usuarios' %}">Registrar</a>
     </form>
 </body>
 </html>
