--- a/Roles_Usuarios/Templates/index.html
+++ b/Roles_Usuarios/Templates/index.html
@@ -8,5 +8,11 @@
 </head>
 <body>
     <h1>Document</h1>
+    <div>
+        <a class='btn' href="{% url 'listar_usuarios' %}">Listar Usuarios</a>
+        <br>
+        <br>
+        <a class='btn' href="{% url 'registro' %}">Registro</a>
+    </div>
 </body>
 </html>
