--- a/Roles_Usuarios/Templates/login.html
+++ b/Roles_Usuarios/Templates/login.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="assets/img/logo_r_resumme.png" type="image/x-icon" />
+    <link rel="icon" href="{% static 'assets/img/logo_r_resumme.png' %}" type="image/x-icon" />
     <title>Log In</title>
     <script src="{% static 'assets/js/particles.js' %}"></script>
     <script src="{% static 'assets/js/main.js' %}"></script>
@@ -18,7 +18,7 @@
       <div class="login column is-4 ">
         <section class="section">
           <div class="has-text-centered">
-              <img class="login-logo" src="assets/img/logo_r_resumme.png">
+              <img class="login-logo" src="{% static 'assets/img/logo_r_resumme.png' %}">
           </div>
 
           <div class="field">
@@ -41,7 +41,7 @@
             </div>
           </div>
           <div class="has-text-centered">
-            <a class="button is-vcentered is-primary is-outlined">Login</a>
+            <button class="button is-primary">Login</button
           </div>
           <div class="has-text-centered">
             <a href="signup.html"> Don't you have an account? Sign up now!</a>
