--- a/Roles_Usuarios/Templates/index.html
+++ b/Roles_Usuarios/Templates/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Document</h1>
+    <h1>Bienvenido {{ user.username }}</h1>
     <div>
         <a class='btn' href="{% url 'listar_usuarios' %}">Listar Usuarios</a>
         <br>
