--- a/Roles_Usuarios/Templates/index.html
+++ b/Roles_Usuarios/Templates/index.html
@@ -13,6 +13,9 @@
         <br>
         <br>
         <a class='btn' href="{% url 'registro' %}">Registro</a>
+        <br>
+        <br>
+        <a class='btn' href="{% url 'logout' %}">Salir</a>
     </div>
 </body>
 </html>
