--- a/Roles_Usuarios/Templates/login.html
+++ b/Roles_Usuarios/Templates/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 {% load static %}
+{% load bulma_tags %}
 <html>
   <head>
     <meta charset="utf-8">
@@ -22,10 +23,22 @@
           </div>
           <form method="POST">
             {% csrf_token %}
-              <div class="field">
-                <label class="label">Username</label>
+            {% if form.non_fields.errors %}
+            <div class="notification is-warning">
+              {{ form.non_fields.errors }}
+            </div>
+            {% endif %}
+            <div class="field">
+              {% if form.errors %}
+                {% for error in form.errors %}
+                <div class="notification is-danger">
+                    <button class="delete" data-dismiss="alert" aria-label="Close"></button>
+                    <strong>Error: usuario o contraseña incorrecta </strong>
+                  </div>
+                {% endfor %}
+              {% endif %}
                 <div class="control has-icons-right">
-                  <input class="input" type="text" name= 'username'>
+                  {{ form.username | bulma }}
                   <span class="icon is-small is-right">
                     <i class="fa fa-user"></i>
                   </span>
@@ -33,9 +46,8 @@
               </div>
 
               <div class="field">
-                <label class="label">Password</label>
                 <div class="control has-icons-right">
-                  <input class="input" type="password" name='password'>
+                  {{ form.password | bulma }}
                   <span class="icon is-small is-right">
                     <i class="fa fa-key"></i>
                   </span>
