--- a/Roles_Usuarios/Templates/index.html
+++ b/Roles_Usuarios/Templates/index.html
@@ -15,6 +15,9 @@
         <a class='btn' href="{% url 'registro' %}">Registro</a>
         <br>
         <br>
+        <a class='btn' href="{% url 'registro_ruta' %}">Registro Ruta</a>
+        <br>
+        <br>
         <a class='btn' href="{% url 'logout' %}">Salir</a>
     </div>
 </body>
