--- a/Roles_Usuarios/Templates/index.html
+++ b/Roles_Usuarios/Templates/index.html
@@ -12,10 +12,13 @@
         <a class='btn' href="{% url 'listar_usuarios' %}">Listar Usuarios</a>
         <br>
         <br>
-        <a class='btn' href="{% url 'registro' %}">Registro</a>
+        <a class='btn' href="{% url 'registro' %}">Registro de usuario</a>
         <br>
         <br>
         <a class='btn' href="{% url 'registro_ruta' %}">Registro Ruta</a>
+        <br>
+        <br>
+        <a class='btn' href="{% url 'listar_ruta' %}">Listar ruta</a>
         <br>
         <br>
         <a class='btn' href="{% url 'logout' %}">Salir</a>
