registro sin contraseña definida

--- a/modelo/templates/index.html
+++ b/modelo/templates/index.html
@@ -21,6 +21,9 @@
         <a class='btn' href="{% url 'listar_ruta' %}">Listar ruta</a>
         <br>
         <br>
+        <a class='btn' href="{% url 'listar_superusers' %}">Listar Super Usuarios</a>
+        <br>
+        <br>
         <a class='btn' href="{% url 'logout' %}">Salir</a>
     </div>
 </body>
