--- a/modelo/templates/signup.html
+++ b/modelo/templates/signup.html
@@ -1,66 +1,38 @@
+{% load static%}
+{% load bulma_tags %}
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="assets/img/logo_r_resumme.png" type="image/x-icon" />
-    <title>Sign Up</title>
-    <script src="assets/js/particles.js"></script>
-    <script src="assets/js/main.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.5.3/css/bulma.min.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0">
-    <link rel="stylesheet" href="assets/css/main.css">
-  </head>
-  <body>
-    <div class="columns is-vcentered">
-      <div class="login column is-4 ">
-        <section class="section">
-          <div class="has-text-centered">
-              <img class="login-logo" src="assets/img/logo_r_resumme.png">
-          </div>
-
-          <div class="field">
-            <label class="label">Username</label>
-            <div class="control has-icons-right">
-              <input class="input" type="text">
-              <span class="icon is-small is-right">
-                <i class="fa fa-user"></i>
-              </span>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" href="{% static 'assets/img/logo_r_resumme.png' %}" type="image/x-icon" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+        <title>Registro</title>
+    </head>
+    <body>
+        <form method="POST">
+            {% csrf_token %}
+            <div class = "container">
+                <div class = "columns">
+                    <div class = "columns is-4">
+                        <div class="field">
+                            <br>
+                            {{ form | bulma }}
+                            <br>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
-
-          <div class="field">
-            <label class="label">Email</label>
-            <div class="control has-icons-right">
-              <input class="input" type="text">
-              <span class="icon is-small is-right">
-                <i class="fa fa-envelope"></i>
-              </span>
+            <div class = "container">
+                <div class = "columns">
+                    <div class = "columns is-4">
+                        <div class="field">
+                            <br>
+                            <button class='button is-primary' type='submit'>Registrar</button>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
-
-          <div class="field">
-            <label class="label">Password</label>
-            <div class="control has-icons-right">
-              <input class="input" type="password">
-              <span class="icon is-small is-right">
-                <i class="fa fa-key"></i>
-              </span>
-            </div>
-          </div>
-          <div class="has-text-centered">
-            <a class="button is-vcentered is-primary is-outlined">Sign Up!</a>
-          </div>
-          <div class="has-text-centered">
-            <a href="login.html"> Already have an account? Log in now !</a>
-          </div>
-        </section>
-      </div>
-      <div id="particles-js" class="interactive-bg column is-8">
-
-      </div>
-    </div>
-
-  </body>
+        </form>    
+    </body>
 </html>
