--- a/modelo/templates/login.html
+++ b/modelo/templates/login.html
@@ -58,7 +58,7 @@
               </div>
             </form>
           <div class="has-text-centered">
-            <a href="signup.html"> Don't you have an account? Sign up now!</a>
+            <a href="{% url 'crear_usuario' %}"> No tienes una cuenta, Registrate ahora !!</a>
           </div>
         </section>
       </div>
