--- a/modelo/templates/signup.html
+++ b/modelo/templates/signup.html
@@ -17,7 +17,8 @@
                     <div class = "columns is-4">
                         <div class="field">
                             <br>
-                            {{ form | bulma }}
+                            {{ form | bulma }} <!-- forma de registro, aunque esta se puede personalizar 
+                                                {{ form.campo | bulma  }} -->
                             <br>
                         </div>
                     </div>
