--- a/modelo/templates/login.html
+++ b/modelo/templates/login.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-{% load static %}
-{% load bulma_tags %}
+{% load static %} <!-- lee los archivos staticos dentro-->
+{% load bulma_tags %} <!-- lee los tags de bulsma para darle forma -->
 <html>
   <head>
     <meta charset="utf-8">
@@ -22,6 +22,9 @@
               <img class="login-logo" src="{% static 'assets/img/logo_r_resumme.png' %}">
           </div>
           <form method="POST">
+            <!-- 
+              si el usuario es incorrecto mandara alertas de usuario y contraseña incorrecto
+            -->
             {% csrf_token %}
             {% if form.non_fields.errors %}
             <div class="notification is-warning">
