--- a/modelo/templates/signup.html
+++ b/modelo/templates/signup.html
@@ -18,7 +18,7 @@
                         <div class="field">
                             <br>
                             {{ form | bulma }} <!-- forma de registro, aunque esta se puede personalizar 
-                                                {{ form.campo | bulma  }} -->
+                                                form.campo | bulma  -->
                             <br>
                         </div>
                     </div>
