--- a/modelo/templates/index.html
+++ b/modelo/templates/index.html
@@ -13,7 +13,7 @@
     <h1>Bienvenido {{ user.nombres }}</h1>
     <div>
         <!-- 
-            si el usuario es staff no aparecera lo que esta dentro de el {% if %}{% endif %}
+            si el usuario es staff no aparecera lo que esta dentro de el if endif
         -->
         {% if request.user.is_staff %}
             <a class='btn' href="{% url 'listar_usuarios' %}">Listar Usuarios</a>
